# graphics-engine-cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  easy_image.cc  easy_image.h  engine  engine.cc  ini_configuration.cc  ini_configuration.h  stochastic-example.L2D
.cache/clangd/index/: 2DLsystem.cc.6E6AB07FF4B80439.idx  2DLsystem.h.2B8BEB21DE08CDF7.idx  3DLsystem.cc.4B47EA495BEFBAF9.idx  3DLsystem.h.88D2A6F3624D9F46.idx  Color.cc.23D83E6D126256EE.idx  Color.h.428332E50EA99202.idx  Face.cc.DA527B33D64ECD95.idx  Face.h.E22995F8B1D5B94C.idx  Figure.cc.278B840CC0B9E862.idx  Figure.h.9B36A4AF0BEBA5EB.idx  Intro.cc.CA8EDC001711286F.idx  Intro.h.BDE65F0606D18670.idx  Line2D.cc.36C5767E9240B403.idx  Line2D.h.EC4BB0F5A0976C06.idx  PlatonicSolids.cc.90E5143A04D361D4.idx  PlatonicSolids.h.90AC8AB62F6B8B6F.idx  Point2D.cc.A6E2221DA111A61D.idx  Point2D.h.7A6D56928ED537AA.idx  Transformations.cc.D8D0D3BB33D576EA.idx  Transformations.h.D4D11086A451EE02.idx  Universal.cc.1FAF10F8036E9BF0.idx  Universal.h.A1D46B5E0B9350C8.idx  WireFrame.cc.5FF69CDA5590BB69.idx  WireFrame.h.B0C4CF9E9521F86B.idx  ZBuffer.cc.F4C986EBFBBF9A72.idx  ZBuffer.h.8E8DF3278AB88B2C.idx  easy_image.cc.8C2CAAF0B381850F.idx  easy_image.h.79A0B67CD2FF27A9.idx  engine.cc.3365E29BF4AFBD06.idx  ini_configuration.cc.21BDA4CFC017DA30.idx  l_parser.cc.F043C930A3CC562E.idx  (+4 more)
Release/: CMakeLists.txt  README.md  easy_image.cc  engine.cc  ini_configuration.cc
Release/handlers/: 3DLsystem.h  Intro.h  WireFrame.h  ZBufferTriangle.cc  ZBufferTriangle.h
Release/util/: Color.h  Face.h  Figure.h  ZBuffer.cc
handlers/: 2DLsystem.cc  2DLsystem.h  3DLsystem.cc  Fractals.cc  Fractals.h  Intro.cc  LightedZBuffering.cc  LightedZBuffering.h  Universal.cc  Universal.h  WireFrame.cc  WireFrame.h  ZBufferTriangle.cc  ZBufferTriangle.h  ZBufferTriangles.cc  ZBufferingTriangles.cc  ZBufferingTriangles.h
lib/l_parser/: l_parser.cc  l_parser.h
lib/shapes/: Rectangle.h  Shape.h
misc/docs/: 1_lsystems.pptx  2_linedrawings.ppt  3_figures.ppt
misc/l_systems/: 32_segment_curve.L2D  l_systems001.ini  l_systems002.ini  l_systems003.ini  l_systems004.ini  l_systems005.ini  l_systems006.ini  l_systems007.ini  l_systems008.ini  l_systems009.ini  l_systems010.ini  l_systems011.ini  l_systems012.ini  l_systems013.ini  l_systems014.ini  l_systems015.ini  l_systems016.ini  l_systems017.ini  l_systems018.ini  l_systems019.ini  l_systems020.ini  l_systems021.ini  l_systems022.ini  l_systems023.ini  l_systems024.ini  l_systems025.ini  l_systems026.ini  levy_c_curve.L2D
misc/line_drawings/: line_drawings001.ini
misc/wireframes/: wireframes010.ini  wireframes011.ini  wireframes012.ini  wireframes013.ini  wireframes014.ini  wireframes015.ini
misc/z_buffered_wireframes/: AIO.ini  z_buffered_wireframes037.ini  z_buffered_wireframes038.ini  z_buffered_wireframes039.ini  z_buffered_wireframes040.ini  z_buffered_wireframes041.ini  z_buffered_wireframes042.ini
scripts/: compare-all.sh  fix-paths.sh  run-all.sh
scripts/compare-images/: package.json
util/: Color.cc  Color.h  Face.cc  Face.h  Figure.cc  Figure.h  Light.h  Line2D.h  Point2D.h  Transformations.cc  ZBuffer.cc  ZBuffer.h
util/generators/: PlatonicSolids.cc  PlatonicSolids.h  Transformations.cc  Transformations.h
